1) fix Firefox/IE issues     2) update text in proj intro page     3) shift Viz 1 text to bottom (CANCELLED)     4) Add links to IG, FB and website on about us page     5) Add footer text saying the supported by NAC thing     6) Web counter (only for us/NAC to track)     7) replace hover over text with hover over to open a modal window with more information?     8) Replace viz1 description text     9) Change about us

--- a/www/MainApp/css/base.css
+++ b/www/MainApp/css/base.css
@@ -1,9 +1,23 @@
 html, body {
-    height: 100%;
+    position: relative;
+    height: 100vh;
+    min-height: 100vh;
+    overflow: auto;
+}
+
+.footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    height: 50px;
+    line-height: 50px;
+    font-size: 1.0em;
 }
 
 main {
     height: 100%;
+    overflow: auto;
 }
 
 img {
